fix: 3532 tooltip and ellipsis for truncated policy configurator fields

--- a/frontend/src/app/modules/policy-engine/policy-configuration/policy-configuration/policy-configuration.component.scss
+++ b/frontend/src/app/modules/policy-engine/policy-configuration/policy-configuration/policy-configuration.component.scss
@@ -1501,6 +1501,14 @@
     }
 }
 
+.policy-configuration[readonly="true"]::ng-deep .right-bottom-toolbar input.prop-input,
+.policy-configuration[readonly="true"]::ng-deep .right-bottom-toolbar input.input-end,
+.policy-configuration[readonly="true"]::ng-deep .right-bottom-toolbar p-select.p-disabled,
+.policy-configuration[readonly="true"]::ng-deep .right-bottom-toolbar p-multiselect.p-disabled,
+.policy-configuration[readonly="true"]::ng-deep .right-bottom-toolbar .not-editable-text {
+    pointer-events: auto;
+}
+
 .policy-configuration[readonly="true"]::ng-deep .inspector-subsection {
     pointer-events: none;
     filter: grayscale(1);
